WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156751
JavaScriptCore garbage collection is missing an autorelease pool
https://bugs.webkit.org/show_bug.cgi?id=156751
Summary
JavaScriptCore garbage collection is missing an autorelease pool
Geoffrey Garen
Reported
2016-04-19 11:41:42 PDT
JavaScriptCore garbage collection is missing an autorelease pool
Attachments
Patch
(1.66 KB, patch)
2016-04-19 11:43 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(1.70 KB, patch)
2016-04-19 11:43 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(3.29 KB, patch)
2016-04-19 12:32 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-yosemite
(498.35 KB, application/zip)
2016-04-19 13:25 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews115 for mac-yosemite
(1.27 MB, application/zip)
2016-04-19 13:41 PDT
,
Build Bot
no flags
Details
Patch
(3.85 KB, patch)
2016-04-20 19:25 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(3.84 KB, patch)
2016-04-20 19:56 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(3.68 KB, patch)
2016-04-20 19:58 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2016-04-19 11:43:03 PDT
Created
attachment 276735
[details]
Patch
Geoffrey Garen
Comment 2
2016-04-19 11:43:37 PDT
Created
attachment 276736
[details]
Patch
WebKit Commit Bot
Comment 3
2016-04-19 11:44:40 PDT
Attachment 276736
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/heap/Heap.cpp:64: Declaration has space between type name and * in typedef void *NSAutoreleasePoolMark [whitespace/declaration] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 4
2016-04-19 12:32:59 PDT
Created
attachment 276745
[details]
Patch
Mark Lam
Comment 5
2016-04-19 12:34:48 PDT
Comment on
attachment 276745
[details]
Patch r=me
WebKit Commit Bot
Comment 6
2016-04-19 12:35:02 PDT
Attachment 276745
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/heap/Heap.cpp:64: Declaration has space between type name and * in typedef void *NSAutoreleasePoolMark [whitespace/declaration] [3] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 7
2016-04-19 13:25:39 PDT
Comment on
attachment 276745
[details]
Patch
Attachment 276745
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1187264
Number of test failures exceeded the failure limit.
Build Bot
Comment 8
2016-04-19 13:25:42 PDT
Created
attachment 276750
[details]
Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 9
2016-04-19 13:41:02 PDT
Comment on
attachment 276745
[details]
Patch
Attachment 276745
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1187273
Number of test failures exceeded the failure limit.
Build Bot
Comment 10
2016-04-19 13:41:05 PDT
Created
attachment 276753
[details]
Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Geoffrey Garen
Comment 11
2016-04-19 13:58:01 PDT
Comment on
attachment 276745
[details]
Patch Crashes in release wk1 builds.
Geoffrey Garen
Comment 12
2016-04-20 19:25:12 PDT
Created
attachment 276887
[details]
Patch
Saam Barati
Comment 13
2016-04-20 19:33:53 PDT
Comment on
attachment 276887
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=276887&action=review
> Source/JavaScriptCore/heap/Heap.cpp:402 > +#if USE(FOUNDATION)
Shouldn't this still be inside the function?
Geoffrey Garen
Comment 14
2016-04-20 19:56:07 PDT
Created
attachment 276891
[details]
Patch
Geoffrey Garen
Comment 15
2016-04-20 19:58:31 PDT
Created
attachment 276893
[details]
Patch
Mark Lam
Comment 16
2016-04-20 20:30:42 PDT
Comment on
attachment 276893
[details]
Patch r=me
Geoffrey Garen
Comment 17
2016-04-20 20:50:32 PDT
Comment on
attachment 276893
[details]
Patch cq+ 🍀
WebKit Commit Bot
Comment 18
2016-04-20 21:39:59 PDT
Comment on
attachment 276893
[details]
Patch Clearing flags on attachment: 276893 Committed
r199803
: <
http://trac.webkit.org/changeset/199803
>
WebKit Commit Bot
Comment 19
2016-04-20 21:40:05 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 20
2016-04-24 09:57:14 PDT
Comment on
attachment 276893
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=276893&action=review
> Source/JavaScriptCore/heap/Heap.cpp:421 > + void* context = objc_autoreleasePoolPush();
Gotta say, auto was made for situations like this, where we don’t care at all what the type of "context" is.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug